Created Data Loader
Data Loader is new. It's used to load data.
Made a number of other changes..

--- a/ProjectTempus 0.01/ProjectTempus 0.01.vcxproj
+++ b/ProjectTempus 0.01/ProjectTempus 0.01.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="Bot.h" />
     <ClInclude Include="CHRTimer.h" />
     <ClInclude Include="ContactListener.h" />
+    <ClInclude Include="DataLoader.h" />
     <ClInclude Include="DebugDraw.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Graphics.h" />
@@ -110,6 +111,7 @@
     <ClCompile Include="BackgroundTexture.cpp" />
     <ClCompile Include="Bot.cpp" />
     <ClCompile Include="ContactListener.cpp" />
+    <ClCompile Include="DataLoader.cpp" />
     <ClCompile Include="DebugDraw.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Graphics.cpp" />
